fix: resolve Sprint 3 QA defects — README, gitignore, remove jars